# mnist-web

./: .gitignore  app.py  main.py  model.py  pyproject.toml
templates/: default.html  index.html  menu.html  mnist_result.html  mnist_upload.html
